# quickli

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-request.yml  feature-request.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: developer-guide.md  installation.md  open-source-release.md  usage.md  validation.md
docs/adr/: 0001-commandless-entrypoint.md
examples/: README.md
examples/complex/: README.md
examples/complex/pyk5l/: README.md  app.py
examples/complex/pyk5l/manifests/: web-pod.yaml
examples/quickhead/: app.py
examples/simple/: README.md
examples/simple/cat-cli/: README.md  quickcat.py
examples/simple/ls-cli/: README.md  quickls.py
examples/simple/mkdir-cli/: README.md  quickmkdir.py
examples/simple/quickhead/: README.md
specs/: application.md  argument.md  command.md  option.md  plugin.md
src/quickli/: __init__.py  application.py  argument.py  command.py  exceptions.py  option.py  validators.py
tests/: test_application.py  test_pyk5l_example.py
